[package]
name = "notes-lib"
version = "0.1.0"
authors = ["Woshiluo Luo <woshiluo.luo@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For time 
chrono = "0.4.19"

# Diesel for MySQL
diesel = { version = "1.4.4", features = ["mysql"] }

# Rand
rand = "0.8"

# Hash
bcrypt = "0.9"

# Serde for json
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
